--- a/css/style_main.css
+++ b/css/style_main.css
@@ -12,10 +12,10 @@ Selector {
 body {
 	overflow: hidden;
 	margin: auto;
+	font-family: arial;
 }
 
 .list1{
-	font-family: calibri;
 	font-size: 12px;
 	text-align: right;
 	list-style: none;
@@ -23,7 +23,6 @@ body {
 }
 
 .list2{
-	font-family: calibri;
 	font-size: 12px;
 	text-align: left;
 	list-style: none;
@@ -31,7 +30,6 @@ body {
 }
 
 .orderlist1{
-	font-family: calibri;
 	text-align: left;
 }
 
@@ -40,12 +38,7 @@ a {
 }
 
 h1 {
-	font-family: calibri;
 	font-size: 1rem;	
-}
-
-p {
-	font-family: calibri;
 }
 
 /***********************************************************************
@@ -63,8 +56,7 @@ p {
 
 .header{
 	margin: 5px;
-	padding: 5px;	
-	font-family: calibri;
+	padding: 5px;
 }
 
 .body{
@@ -76,7 +68,6 @@ p {
 .footer{
 	margin: auto;
 	padding: 5px;
-	font-family: calibri;
 }
 
 .Left{
@@ -112,7 +103,6 @@ p {
     background-color: #fff;
     padding: 10px;
     margin: 5px;
-	font-family: calibri;
 	font-size: .8rem;
 	color: #444;
 }
