--- a/css/style_main.css
+++ b/css/style_main.css
@@ -9,10 +9,15 @@ Selector {
  *  To ensure contents do not overflow outside of container
  **********************************************************************/
 
+@font-face{
+    font-family: "Calibri";
+    src: url('./font-files/Calibri.ttf'),
+} 
+
 body {
 	overflow: hidden;
 	margin: auto;
-	font-family: arial;
+	font-family: Calibri;
 }
 
 .list1{
