--- a/css/style_main.css
+++ b/css/style_main.css
@@ -11,7 +11,7 @@ Selector {
 
 @font-face{
     font-family: Calibri;
-    src: url('https://github.com/joshuachinys/danieldibraw/tree/master/font-files/Calibri.ttf');
+    src: url('../font-files/Calibri.ttf');
 }
 
 body {
