--- a/css/style_main.css
+++ b/css/style_main.css
@@ -114,3 +114,21 @@ h1 {
 .box > img {
     width: 100%;
 }
+
+/***********************************************************************
+ *  Video container
+ **********************************************************************/
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	max-width: 450px;
+}
+
+.video-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
