--- a/css/style_main.css
+++ b/css/style_main.css
@@ -122,7 +122,6 @@ h1 {
 .video-container {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
-	max-width: 450px;
 }
 
 .video-iframe {
@@ -131,4 +130,6 @@ h1 {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	max-width: 426px;
+	max-height: 240px;
 }
