--- a/css/style_main.css
+++ b/css/style_main.css
@@ -98,6 +98,12 @@ h1 {
     grid-gap: 5px;
 }
 
+.grid-wrapper-video {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 500px));
+    grid-gap: 5px;
+}
+
 .box {
     background-color: #fff;
     padding: 2px;
@@ -116,6 +122,7 @@ h1 {
 
 .video-container {
 	position: relative;
+	height: 0;
 	padding-bottom: 56.25%; /* 16:9 */
 }
 
